# elpc

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  Session.vim  build.rs  elp_lang.y
.github/workflows/: rust.yml
POC/apple-compiler/: Cargo.toml  bindings.rs  build.rs
POC/apple-compiler/src/: lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: config.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: config.rs  elp.pest  language.pest  late-night-ramblings.md  lib.rs  parser.rs  parsing_error.rs  token_stream.rs
crates/parser/tests/: ast.rs  lexer.rs  token_stream.rs
crates/pest_parser/: Cargo.toml  elp.pest  language.pest
crates/pest_parser/src/: ast.rs  elp.pest  lib.rs  parser.rs
examples/: kitchen-sink.velp
examples/BlogStyle/: Package.elp  main.velp  styles.selp
examples/BlogStyle/components/: paragraph.velp
examples/BlogStyle/internal/: api.elp
examples/BlogStyle/screens/: about.velp  home.velp
examples/ChatRoom/: Package.elp  main.velp
examples/ChatRoom/components/: login-form.velp  message.velp
examples/HelloWorld/: Package.elp  main.elp  main.velp  styles.selp
src/: elp.l  elp.pest  elp.y  grammar.pest  main.rs  parser.rs
src/ast/: lexer.rs  lexer_parser.rs  mod.rs  nodes.rs  parser.rs  parsing_error.rs  syntax_error.rs  types.rs
src/compiler/: mod.rs
src/lexer/: lexer.rs  lexer_parser.rs  mod.rs  parsing_error.rs
src/parser/: lexer.rs  lexer_parser.rs  parsing_error.rs  syntax_error.rs
src/parserv2/: mod.rs  node.rs  visitor.rs
src_old/: main.rs
src_old/parser/: mod.rs
(+72 files in other folders)
